--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,8 @@
     <filter-mapping>
         <filter-name>SLOContextFilter</filter-name>
         <url-pattern>/SLOServlet</url-pattern>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     <!-- END of SLO Context Filter -->
 
