Configuration and metadata template added for SLO.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,10 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>SLOContextFilter</filter-name>
+        <url-pattern>/profile/SAML2/POST/SLO</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>SLOContextFilter</filter-name>
         <url-pattern>/SLOServlet</url-pattern>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
