Don't pull in two versions of bouncycastle
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2880 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>ant-extensions</artifactId>
             <version>13Apr2008</version>
             <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.bouncycastle</groupId>
+                    <artifactId>bcprov-jdk14</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
