Support IdP-initiated logout.
Created LogoutServlet which calls the profile handler
with a special flag IDP_INITIATED_LOGOUT set. Profile
handler populates the sloContext without looking for
a SAML logout request in the transport.

When the logout is initiated by the IdP, the front-channel
logout question phase is skipped.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -110,7 +110,22 @@
         <servlet-name>SLOServlet</servlet-name>
         <url-pattern>/SLOServlet</url-pattern>
     </servlet-mapping>
-    <!-- END of SLO Servlet -->
+    
+    <!-- Servlet for IdP - initiated Logout -->
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>edu.internet2.middleware.shibboleth.idp.slo.LogoutServlet</servlet-class>
+        <init-param>
+            <!-- Path for front-channel single logout profile handler -->
+            <param-name>profileHandlerPath</param-name>
+            <param-value>/profile/SAML2/Redirect/SLO</param-value>
+        </init-param>
+        <load-on-startup>3</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/Logout</url-pattern>
+    </servlet-mapping>
 
     <!-- Servlet protected by container user for RemoteUser authentication -->
     <servlet>
