https://bugs.internet2.edu/jira/browse/SIDP-350
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2893 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -116,6 +116,10 @@
                 </copy>
             </then>
             <else>
+                <propertyfile file="${resources.dir}/install.properties">
+                    <entry key="idp.home" value="${idp.home.input}" />
+                </propertyfile>
+            	
                 <!-- 
                     Even if we're not overwritting the config we should still add new files, for example, files added
                     in a new release.
