--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
             <version>1.1.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>edu.vt.middleware</groupId>
+                    <artifactId>ldap</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>edu.vt.middleware</groupId>
+            <artifactId>vt-ldap</artifactId>
+            <version>2.8.4</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
