--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,12 +20,22 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <!--  Add IdP SLF4J MDC cleanup filter to all requests -->
+    <filter>
+        <filter-name>SL4JCleanupFilter</filter-name>
+        <filter-class>edu.internet2.middleware.shibboleth.common.log.SLF4JMDCCleanupFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SL4JCleanupFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
     <!--  Add IdP Session object to incoming profile requests -->
     <filter>
         <filter-name>IdPSessionFilter</filter-name>
         <filter-class>edu.internet2.middleware.shibboleth.idp.session.IdPSessionFilter</filter-class>
     </filter>
-    
     <filter-mapping>
         <filter-name>IdPSessionFilter</filter-name>
         <url-pattern>/*</url-pattern>
