--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
         their users.  This information is then read and acted upon by Service Providers.
     </description>
     
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <xerces.groupId>org.apache.xerces</xerces.groupId>
+        <xerces.version>2.10.0</xerces.version>
+    </properties>
+    
     <repositories>
         <repository>
             <id>shibboleth.internet2.edu</id>
@@ -42,37 +48,38 @@
             <artifactId>shibboleth-common</artifactId>
             <version>1.2.0</version>
         </dependency>
+        
+        <!-- Provided dependencies -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
+            <scope>provided</scope>
         </dependency>
-        
-        <!-- Provided dependencies -->
                 
         <!-- Runtime dependencies -->
         <dependency>
-            <groupId>org.apache.xerces</groupId>
+            <groupId>${xerces.groupId}</groupId>
             <artifactId>xml-apis</artifactId>
-            <version>2.9.1</version>
+            <version>${xerces.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.xerces</groupId>
+            <groupId>${xerces.groupId}</groupId>
             <artifactId>xercesImpl</artifactId>
-            <version>2.9.1</version>
+            <version>${xerces.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.xerces</groupId>
+            <groupId>${xerces.groupId}</groupId>
             <artifactId>resolver</artifactId>
-            <version>2.9.1</version>
+            <version>${xerces.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.xerces</groupId>
+            <groupId>${xerces.groupId}</groupId>
             <artifactId>serializer</artifactId>
-            <version>2.9.1</version>
+            <version>${xerces.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -83,14 +90,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.7.0</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.ant</groupId>
             <artifactId>ant-nodeps</artifactId>
-            <version>1.7.0</version>
+            <version>1.7.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -139,8 +140,8 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-mock</artifactId>
-            <version>2.0.8</version>
+            <artifactId>spring-test</artifactId>
+            <version>2.5.6.SEC02</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
