--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
-    <version>2.2.0</version>
+    <version>2.2.1-SNAPSHOT</version>
     
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.1</version>
         </dependency>
         
         <!-- Provided dependencies -->
