support overriding certificate lifetime by means of an environment option - SIDP-286
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@2981 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>ant-extensions</artifactId>
-            <version>13Apr2008</version>
+            <version>11Jan2011</version>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
