--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
-    <version>2.2.1</version>
+    <version>2.3.0-SNAPSHOT</version>
     
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
-            <version>1.2.1</version>
+            <version>1.3.0</version>
         </dependency>
         
         <!-- Provided dependencies -->
@@ -193,6 +193,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                   <argLine>-Xmx256m</argLine>
+                  <skipTests>true</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -396,7 +397,7 @@
             <id>cantor</id>
             <name>Scott Cantor</name>
             <organization>The Ohio State University</organization>
-            <organizationUrl>http://www.ohio-state.edu/</organizationUrl>
+            <organizationUrl>http://www.osu.edu/</organizationUrl>
             <roles>
                 <role>developer</role>
             </roles>
@@ -415,19 +416,19 @@
         <developer>
             <id>lajoie</id>
             <name>Chad La Joie</name>
-            <organization>SWITCH</organization>
-            <organizationUrl>http://www.switch.ch/</organizationUrl>
+            <organization>Itumi, LLC</organization>
+            <organizationUrl>http://www.itumi.biz/</organizationUrl>
             <roles>
                 <role>developer</role>
                 <role>documentation</role>
             </roles>
-            <timezone>+1</timezone>
+            <timezone>-5</timezone>
         </developer>
         <developer>
             <id>wnorris</id>
             <name>Will Norris</name>
-            <organization>University of Southern California</organization>
-            <organizationUrl>http://www.usc.edu/</organizationUrl>
+            <organization>Google, Inc.</organization>
+            <organizationUrl>http://www.google.com/</organizationUrl>
             <roles>
                 <role>developer</role>
             </roles>
