--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -72,6 +72,7 @@
                 <mkdir dir="${idp.home.path}/war" />
 
                 <var name="idp.entity.id" value="https://${idp.hostname}/idp/shibboleth" />
+                <var name="idp.web.xml.name" value="${webapp.dir}/WEB-INF/web.xml" />
 
                 <regexSplit input="${idp.hostname}" regex="^.*\.(.*\..*$)" addproperty="idp.scope" />
 
@@ -135,6 +136,17 @@
                     <entry key="idp.home" value="${idp.home.input}" />
                 </propertyfile>
             	
+                <if> 
+                    <available file="${idp.home.path}/conf/web.xml" property="idp.web.xml.exists"/>
+                    <then>
+                        <echo message="Using ${idp.home.path}/conf/web.xml rather than default web.xml"/>
+                        <var name="idp.web.xml.name" value="${idp.home.path}/conf/web.xml" />
+                    </then>
+                    <else>
+                        <var name="idp.web.xml.name" value="${webapp.dir}/WEB-INF/web.xml" />
+                    </else>
+                </if>
+
                 <!-- 
                     Even if we're not overwritting the config we should still add new files, for example, files added
                     in a new release.
@@ -185,7 +197,7 @@
         </copy>
 
         <!-- create web.xml -->
-        <copy file="${webapp.dir}/WEB-INF/web.xml"
+        <copy file="${idp.web.xml.name}"
               todir="${installer.dir}"
               preservelastmodified="true"
               overwrite="true">
