--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.1</version>
         </dependency>
         
         <!-- Provided dependencies -->
@@ -55,6 +55,14 @@
             <artifactId>servlet-api</artifactId>
             <version>2.4</version>
         </dependency>
+        
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+ 
+
                 
         <!-- Runtime dependencies -->
         <dependency>
