--- a/src/installer/resources/build.xml
+++ b/src/installer/resources/build.xml
@@ -208,7 +208,7 @@
 
         <!-- build the war file -->
         <war warfile="${installer.dir}/${war.name}.war" webxml="${installer.dir}/web.xml">
-            <lib dir="${basedir}/lib" excludes="servlet-api*.jar"/>
+            <lib dir="${basedir}/lib" excludes="servlet-api*.jar,jsp-api*.jar"/>
             <webinf dir="${webapp.dir}/WEB-INF" excludes="web.xml" />
             <fileset dir="${webapp.dir}" excludes="WEB-INF/**" />
         </war>
