SIDP-477 point to shibboleth wiki
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3008 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/conf-tmpl/login.config
+++ b/src/installer/resources/conf-tmpl/login.config
@@ -25,7 +25,7 @@
 ShibUserPassAuth {
 
 // Example LDAP authentication
-// See: https://spaces.internet2.edu/display/SHIB2/IdPAuthUserPass
+// See: https://wiki.shibboleth.net/confluence/display/SHIB2/IdPAuthUserPass
 /*
    edu.vt.middleware.ldap.jaas.LdapLoginModule required
       host="ldap.example.org"
@@ -35,7 +35,7 @@ ShibUserPassAuth {
 */
 
 // Example Kerberos authentication, requires Sun's JVM
-// See: https://spaces.internet2.edu/display/SHIB2/IdPAuthUserPass
+// See: https://wiki.shibboleth.net/confluence/display/SHIB2/IdPAuthUserPass
 /*
    com.sun.security.auth.module.Krb5LoginModule required
       useKeyTab="true"
