correct test logback config file name remove use of deprecated macros in POM fix javadoc typos fix test case that broke now that TARGET param, in POST profile, is aggressively escaped
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3012 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/pom.xml
+++ b/pom.xml
@@ -213,8 +213,8 @@
                             <manifestSection>
                                 <name>edu/internet2/middleware/shibboleth/idp/</name>
                                 <manifestEntries>
-                                    <Implementation-Title>${pom.artifactId}</Implementation-Title>
-                                    <Implementation-Version>${pom.version}</Implementation-Version>
+                                    <Implementation-Title>${project.artifactId}</Implementation-Title>
+                                    <Implementation-Version>${project.version}</Implementation-Version>
                                     <Implementation-Vendor>shibboleth.internet2.edu</Implementation-Vendor>
                                 </manifestEntries>
                             </manifestSection>
