--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>edu.internet2.middleware</groupId>
             <artifactId>shibboleth-common</artifactId>
-            <version>1.3.0</version>
+            <version>1.3.0-slo2</version>
         </dependency>
 
         <!-- Provided dependencies -->
