update example login.config to use latest/preferred VT LDAP JAAS properties
git-svn-id: https://subversion.switch.ch/svn/shibboleth/java-idp/branches/REL_2@3045 ab3bd59b-922f-494d-bb5f-6f0a3c29deca

--- a/src/installer/resources/conf-tmpl/login.config
+++ b/src/installer/resources/conf-tmpl/login.config
@@ -28,10 +28,10 @@ ShibUserPassAuth {
 // See: https://wiki.shibboleth.net/confluence/display/SHIB2/IdPAuthUserPass
 /*
    edu.vt.middleware.ldap.jaas.LdapLoginModule required
-      host="ldap.example.org"
-      base="ou=people,dc=example,dc=org"
+      ldapUrl="ldap://ldap.example.org"
+      baseDn="ou=people,dc=example,dc=org"
       ssl="true"
-      userField="uid";
+      userFilter="uid={0}";
 */
 
 // Example Kerberos authentication, requires Sun's JVM
