--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>2.8</version>
                         <executions>
                             <execution>
                                 <id>release-javadoc</id>
@@ -316,6 +317,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jxr-plugin</artifactId>
+                        <version>2.2</version>
                         <executions>
                             <execution>
                                 <id>release-jxr</id>
@@ -329,6 +331,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-report-plugin</artifactId>
+                        <version>2.9</version>
                         <executions>
                             <execution>
                                 <id>release-unitTest</id>
@@ -340,7 +343,9 @@
                         </executions>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-assembly-plugin</artifactId>
+                        <version>2.2.1</version>
                         <executions>
                             <execution>
                                 <id>make-assembly</id>
@@ -354,6 +359,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.3</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
