--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,23 @@
         <svn.relative.location>java-shib-idp2</svn.relative.location>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>shib-release</id>
+            <url>https://shibboleth.net/nexus/content/groups/public</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>shib-snapshot</id>
+            <url>https://shibboleth.net/nexus/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- Compile dependencies -->
         <dependency>
