--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
             <groupId>javax.servlet.jsp</groupId>
             <artifactId>jsp-api</artifactId>
             <version>2.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Runtime dependencies -->
