--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>net.shibboleth</groupId>
         <artifactId>parent</artifactId>
-        <version>TRUNK-SNAPSHOT</version>
+        <version>2</version>
     </parent>
 
     <groupId>edu.internet2.middleware</groupId>
     <artifactId>shibboleth-identityprovider</artifactId>
-    <version>2.3.4-SNAPSHOT</version>
+    <version>2.3.4</version>
 
     <!-- We bundle as a jar here, the installer creates the WAR -->
     <packaging>jar</packaging>
